--- a/templates/slides.html
+++ b/templates/slides.html
@@ -22,7 +22,8 @@
         <!-- Bootstrap Core JavaScript -->
         <script src="static/js/bootstrap.min.js">
         </script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js" type="text/javascript">
+        </script>
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -49,34 +50,28 @@
                         <div class="slideTemplate">
                             <div class="row">
                                 <div class="row-left">
-                                    <p class="id-of-slide" style="display: none"> 1 </p>
+                                    <p class="id-of-slide" style="display: none">
+                                        1
+                                    </p>
                                     <a href="javascript: return false;" id="1" onclick="changePad(this.id);">
-                                        <img alt="" class="img-responsive" style="display: none" src="http://imgur.com/UBOTllp.jpg" tabindex="0"/>
+                                        <img alt="" class="img-responsive" src="http://imgur.com/UBOTllp.jpg" style="display: none" tabindex="0"/>
                                     </a>
                                 </div>
                                 <div class="row-right">
-                                    <img src="static/img/user.png" style="display: none" class="user-img">
+                                    <img class="user-img" src="static/img/user.png" style="display: none">
                                     </img>
-                                    <p  class="number-of-editing" style="display: none"> 0
-                                    </p> 
-                                    <p class="keyword" style="display: none">Keywords: </p>
+                                    <p class="number-of-editing" style="display: none">
+                                        0
+                                    </p>
+                                    <p class="keyword" style="display: none">
+                                        Keywords:
+                                    </p>
                                 </div>
                             </div>
                             <hr>
                             </hr>
                         </div>
                         <hr>
-                            <!-- <div class="row">
-                                <label class="take-picture">
-                                    <span class="btn-label">
-                                        <i class="glyphicon glyphicon-camera">
-                                        </i>
-                                    </span>
-                                    Add Slides
-                                    <input accept="image/*" class="take-picture" id="take-picture" type="file">
-                                    </input>
-                                </label>
-                            </div> -->
                         </hr>
                     </ul>
                 </div>
@@ -129,8 +124,8 @@
         <script src="static/js/slides.js">
         </script>
         <script src="static/js/megapix-image.js">
-        </script>        
+        </script>
         <script src="static/js/upload-photo.js">
-        </script>        
+        </script>
     </body>
 </html>
