--- a/templates/worker.html
+++ b/templates/worker.html
@@ -15,8 +15,6 @@
         <!-- Custom CSS -->
         <link href="static/css/simple-sidebar.css" rel="stylesheet"/>
         <link href="static/css/myCss.css" rel="stylesheet"/>
-        
-        
         <script src="static/js/annyang.js">
         </script>
         <!-- jQuery -->
@@ -25,7 +23,6 @@
         <script src="static/js/etherpad.js">
         </script>
         <!-- <script src="static/js/worker.js"></script> -->
-        
         <script src="https://watson-speech.mybluemix.net/bower_components/watson-speech/dist/watson-speech.js">
         </script>
         <!-- window.fetch pollyfill for IE/Edge & Older Chrome/FireFox -->
@@ -39,7 +36,8 @@
         </script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js">
         </script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js" type="text/javascript">
+        </script>
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]
@@ -64,17 +62,22 @@
                         <div class="slideTemplate">
                             <div class="row">
                                 <div class="row-left">
-                                    <p class="id-of-slide" style="display: none"> 1 </p>
+                                    <p class="id-of-slide" style="display: none">
+                                        1
+                                    </p>
                                     <a href="javascript: return false;" id="1" onclick="changePad(this.id);">
                                         <img alt="" class="img-responsive" src="http://imgur.com/UBOTllp.jpg" style="display: none" tabindex="0"/>
                                     </a>
                                 </div>
                                 <div class="row-right">
-                                    <img src="static/img/user.png" style="display: none" class="user-img">
+                                    <img class="user-img" src="static/img/user.png" style="display: none">
                                     </img>
-                                    <p class="number-of-editing" style="display: none"> 0
+                                    <p class="number-of-editing" style="display: none">
+                                        0
                                     </p>
-                                    <p class="keyword" style="display: none">Keywords: </p>
+                                    <p class="keyword" style="display: none">
+                                        Keywords:
+                                    </p>
                                 </div>
                             </div>
                             <hr>
@@ -91,13 +94,6 @@
                                     <input accept="image/*" class="take-picture" id="take-picture" type="file">
                                     </input>
                                 </label>
-                                <!--
-                        <button type="button" class="btn btn-labeled btn-primary">
-                            <span class="btn-label"><i class="glyphicon glyphicon-camera"></i></span>Add Slides
-                        </button>
-                        <button type="button" class="btn btn-labeled btn-success">
-                            <span class="btn-label"><i class="glyphicon glyphicon-refresh"></i></span>Refresh
-                        </button>-->
                             </div>
                         </hr>
                     </ul>
@@ -149,13 +145,12 @@
         <!-- /#wrapper -->
         <!-- Menu Toggle Script -->
         <script>
-            function extend() {
-        $(".sidebar-nav").toggleClass("responsive");
-        $("#sidebar-wrapper").toggleClass("extend");
-        $("#wrapper").toggleClass("extend");
-    }
+        function extend() {
+            $(".sidebar-nav").toggleClass("responsive");
+            $("#sidebar-wrapper").toggleClass("extend");
+            $("#wrapper").toggleClass("extend");
+        }
         </script>
-        
         <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js">
         </script>
         <script>
@@ -171,38 +166,9 @@
         </script>
         <script src="static/js/worker_IBM.js">
         </script>
-
         <script src="static/js/megapix-image.js">
-        </script>        
+        </script>
         <script src="static/js/upload-photo.js">
         </script>
-
-        <!-- Update pad users count -->
-        <script type="text/javascript">
-            $(function() {
-        console.log( "ready!" );
-    });
-    /*
-    function getPadUsersCount() {
-        $.ajax({
-          type: "GET",
-          url: "/getpadusercount"
-        }).done(function( response ) {
-            console.log(response);
-            response = JSON.parse(response);    // parse JSON string
-
-            for(var padID in response){
-                if(document.getElementById("padInfo-" + padID)) {
-                    // $("#padInfo-" + padID).text('Number of people editing: ' + response[padID]);
-                    $("#padInfo-" + padID).text(response[padID]);
-                }                
-           }            
-        }); 
-
-        setTimeout(getPadUsersCount, 3000); // call getPadUsersCount every 3 seconds
-    }
-    */
-        </script>
-        <!-- Keywords adding Script -->
     </body>
 </html>
