--- a/templates/test.html
+++ b/templates/test.html
@@ -1,129 +1,154 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>capture microphone audio into buffer</title>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8"/>
+        <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+        <meta content="width=device-width, shrink-to-fit=no, initial-scale=1" name="viewport"/>
+        <meta content="" name="description"/>
+        <meta content="" name="author"/>
+        <title>
+            CHI2017 LanBridge
+        </title>
+        <!-- Bootstrap Core CSS -->
+        <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" rel="stylesheet"/>
+        <!-- Custom CSS -->
+        <link href="static/css/simple-sidebar.css" rel="stylesheet"/>
+        <link href="static/css/myCss.css" rel="stylesheet"/>
+        <!-- jQuery -->
+        <script src="static/js/jquery.js">
+        </script>
+        <script src="static/js/etherpad.js">
+        </script>
+        <!-- Bootstrap Core JavaScript -->
+        <script src="static/js/bootstrap.min.js">
+        </script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js" type="text/javascript">
+        </script>
+        <!-- Google Tag Manager -->
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-K32JHFN');</script>
+        <!-- End Google Tag Manager -->
+        <!-- End Google Tag Manager -->
+    </head>
+    <body>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K32JHFN"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
+        <div id="wrapper">
+            <!-- Sidebar -->
+            <div id="sidebar-wrapper">
+                <div class="col-md-offset-2">
+                    <ul class="sidebar-nav">
+                        <br/>
+                        <li class="sidebar-brand">
+                            <a href="/">
+                                <img id="logo" src="static/img/logo.png" style="height:80px">
+                                </img>
+                            </a>
+                        </li>
+                        <li class="icon">
+                            <a onclick="extend()">
+                                ☰
+                            </a>
+                        </li>
+                        <br/>
+                        <p id="sessionTitle">
+                        </p>
+                        <a href="javascript: return false;" id="how-to-use-link" onclick="changePad('introduction');">
+                            How to use
+                        </a>
+                        <hr/>
+                        <div class="sidebar-slides">
+                            <div class="slideTemplate">
+                                <div class="row">
+                                    <div class="row-left">
+                                        <p class="id-of-slide" style="display: none">
+                                            1
+                                        </p>
+                                        <a href="javascript: return false;" id="1" onclick="changePad(this.id);">
+                                            <img alt="" class="img-responsive" src="http://imgur.com/UBOTllp.jpg" style="display: none" tabindex="0"/>
+                                        </a>
+                                    </div>
+                                    <div class="row-right">
+                                        <img class="user-img" src="static/img/users.png" style="display: none">
+                                        </img>
+                                        <p class="number-of-looking" style="display: none">
+                                            0
+                                        </p>
+                                        <p class="keyword" style="display: none">
+                                            Keywords:
+                                        </p>
+                                    </div>
+                                </div>
+                                <hr/>
+                            </div>
+                        </div>
+                    </ul>
+                </div>
+            </div>
+            <!-- /#sidebar-wrapper -->
+            <!-- Page Content -->
+            <div id="page-content-wrapper">
+                <div id="keywordDiv" style="visibility:hidden;">
+                    <span id="showBlock">
+                        <b style="font-size:20px;">
+                            Keywords:
+                        </b>
+                    </span>
+                    <img class="keywordAdd" id="addKeyword" src="static/img/add.png"/>
+                </div>
+                <hr/>
+                <div id="PadContent" style="float: left; width: 100%">
+                    <p id="padId">
+                    </p>
+                    <div id="mypad">
+                    </div>
+                    <div class="speechTemplate">
+                    </div>
+                    <b style="font-size:20px;">
+                        Auto Transcription:
+                    </b>
+                    <div id="lines">
+                    </div>
+                </div>
+            </div>
+            <!-- /#page-content-wrapper -->
+        </div>
+        <!-- /#wrapper -->
+        <!-- Menu Toggle Script -->
+        <script>
+            function extend() {
+            $(".sidebar-nav").toggleClass("responsive");
+            $("#sidebar-wrapper").toggleClass("extend");
+            $("#wrapper").toggleClass("extend");
+            $("#how-to-use-link").toggleClass("extend");
+            $("#sessionTitle").toggleClass("extend");
 
-<script type="text/javascript">
-
-
-  var webaudio_tooling_obj = function () {
-
-    var audioContext = new AudioContext();
-
-    console.log("audio is starting up ...");
-
-    var BUFF_SIZE = 16384;
-
-    var audioInput = null,
-        microphone_stream = null,
-        gain_node = null,
-        script_processor_node = null,
-        script_processor_fft_node = null,
-        analyserNode = null;
-
-    if (!navigator.getUserMedia)
-            navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia ||
-                          navigator.mozGetUserMedia || navigator.msGetUserMedia;
-
-    if (navigator.getUserMedia){
-
-        navigator.getUserMedia({audio:true}, 
-          function(stream) {
-              start_microphone(stream);
-          },
-          function(e) {
-            alert('Error capturing audio.');
-          }
-        );
-
-    } else { alert('getUserMedia not supported in this browser.'); }
-
-    // ---
-
-    function show_some_data(given_typed_array, num_row_to_display, label) {
-
-        var size_buffer = given_typed_array.length;
-        var index = 0;
-        var max_index = num_row_to_display;
-
-        console.log("__________ " + label);
-
-        for (; index < max_index && index < size_buffer; index += 1) {
-
-            console.log(given_typed_array[index]);
         }
-    }
-
-    function process_microphone_buffer(event) {
-
-        var i, N, inp, microphone_output_buffer;
-
-        microphone_output_buffer = event.inputBuffer.getChannelData(0); // just mono - 1 channel for now
-
-        // microphone_output_buffer  <-- this buffer contains current gulp of data size BUFF_SIZE
-
-        show_some_data(microphone_output_buffer, 5, "from getChannelData");
-    }
-
-    function start_microphone(stream){
-
-      gain_node = audioContext.createGain();
-      // gain_node.connect( audioContext.destination );
-
-      microphone_stream = audioContext.createMediaStreamSource(stream);
-      microphone_stream.connect(gain_node); 
-
-      script_processor_node = audioContext.createScriptProcessor(BUFF_SIZE, 1, 1);
-      script_processor_node.onaudioprocess = process_microphone_buffer;
-
-      microphone_stream.connect(script_processor_node);
-      script_processor_node.connect( audioContext.destination );
-      // --- enable volume control for output speakers
-
-      document.getElementById('volume').addEventListener('change', function() {
-
-          var curr_volume = this.value;
-          gain_node.gain.value = curr_volume;
-
-          console.log("curr_volume ", curr_volume);
-      });
-
-      // --- setup FFT
-
-      // script_processor_fft_node = audioContext.createScriptProcessor(2048, 1, 1);
-      // script_processor_fft_node.connect(gain_node);
-
-      // analyserNode = audioContext.createAnalyser();
-      // analyserNode.smoothingTimeConstant = 0;
-      // analyserNode.fftSize = 2048;
-
-      // microphone_stream.connect(analyserNode);
-
-      // analyserNode.connect(script_processor_fft_node);
-
-      // script_processor_fft_node.onaudioprocess = function() {
-
-      //   // get the average for the first channel
-      //   var array = new Uint8Array(analyserNode.frequencyBinCount);
-      //   analyserNode.getByteFrequencyData(array);
-
-      //   // draw the spectrogram
-      //   if (microphone_stream.playbackState == microphone_stream.PLAYING_STATE) {
-
-      //       show_some_data(array, 5, "from fft");
-      //   }
-      // };
-    }
-
-  }(); //  webaudio_tooling_obj = function()
-
-
-
-</script>
-
-</head>
-<body>
-
-    <p>Volume</p>
-    <input id="volume" type="range" min="0" max="1" step="0.1" value="0.5"/>
-
-</body>
+        </script>
+        <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js">
+        </script>
+        <script>
+            // Initialize Firebase
+          var config = {
+            apiKey: "AIzaSyBvhsHOR3UrEdb6gTXR9tIOihdsYizOaVc",
+            authDomain: "clc-chi-6d953.firebaseapp.com",
+            databaseURL: "https://clc-chi-6d953.firebaseio.com",
+            storageBucket: "clc-chi-6d953.appspot.com",
+            messagingSenderId: "20034161141"
+          };
+          firebase.initializeApp(config);
+        </script>
+        <script src="static/js/slides.js">
+        </script>
+        <script src="static/js/megapix-image.js">
+        </script>
+        <script src="static/js/upload-photo.js">
+        </script>
+    </body>
 </html>
